--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,10 @@ body {
     width: 500px;
 }
 
+.card .images .arrow {
+    display: none;
+}
+
 .images .imgShowcase {
     width: 490px;
     height: 430px;
