--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,8 +173,8 @@ body {
 
 @media (max-width: 540px) {
     .card .images .imgShowcase {
-        width: 375px;
-        height: 280px;
+        width: 100%;
+        height: 300px;
         margin-right: 130px;
         border-radius: 0;
     }
