Fazendo a lógica para o carrossel ser de fato funcial, mas ainda falta alguns detalhes para ficar pronto

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,11 @@ body {
 
 .card .images .carousel .slide {
     position: absolute;
+    opacity: 0;
+}
+
+.on {
+    opacity: 1;
 }
 
 .card .images .arrow {
