--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,7 @@ body {
 
 .images .carousel {
     margin-top: -40px;
+    display: none;
 }
 
 .images .carousel a {
@@ -211,6 +212,7 @@ body {
         border-radius: 0;
     }
 
+    .card .images .carousel,
     .card .images .arrow {
         display: block;
     }
